--- a/md/總統府司法改革國是會議相關投書彙整.md
+++ b/md/總統府司法改革國是會議相關投書彙整.md
@@ -138,7 +138,7 @@
 
 ## articles
 ### 2017/03/08 GMT0+8:00 http://talk.ltn.com.tw/article/breakingnews/1997593
-- <p>陳逸南</p><p>此次司法改革國是會議過程中，傳出一種奇怪的論調，現行司法審判不敢引進英美法系的「陪審制」，其原因之一為台灣黑道勢力很大，如果貿然引進「陪審制」，對於參與審判陪審員的身家安全，恐有不利的後果，看起來好像「司法怕黑道」，這樣有公義嗎？</p><p>司法怕黑道有公義嗎？（資料照，記者叢昌瑾攝）</p><p>近日，返台度假的張榮先生（228事件的間接受害者之一）表示，他在旅居加拿大多年，參與多項社區活動，他發現加拿大的司法審判實施「陪審制」非常有成效，對於人權保障貢獻很大。如果人民沒有「免於恐懼的自由」，那麼生活在沒有公義的社會，想要希望政府保護人性尊嚴，根本不用談了。</p><p>國際法專家謝淑媛教授在2010年10月發表「台灣國民應有的法律知識」一文（收錄在《臺灣的品格》李學圖編著第231~234頁），她指出，公民是國家的主人，因此人民必須擁有基本的法律常識。政府立法要民主、司法要獨立、人民須保障、人民結社應自由、集會也該自由、言論更要自由、宗教也是自由的、環境則必須保護等。…….不論是憲法、民法、刑法及其關係法規，乃至行政法規，人民均須有基礎的瞭解，方能明白個人的權利義務，以及政府的權利義務。是故，一般人民才不會相信傳統的觀念：法院是違法的「壞人」才去的。正直守法的「好人」也要去法院支持公義、維護人民的權利。</p><p>由此可知，「好人」、「壞人」都要常去法院，關心司法制度的正當運作。因為臺灣仍有一些司法敗類，才讓黑道勢力有機會傷害人權，令人憂心。期盼在此次司法改革，大家勇敢地站出來參與，並表示意見，希望臺灣明天會更好。</p><p>（台灣北社理事）</p><p>《自由開講》是一個提供民眾對話的電子論壇，不論是對政治、經濟或社會、文化等新聞議題，有意見想表達、有話不吐不快，都歡迎你熱烈投稿。文長700字內為優，來稿請附真實姓名（必寫。有筆名請另註）、職業、聯絡電話、E-mail帳號。本報有錄取及刪修權，不付稿酬；錄用與否將不另行通知。投稿信箱：LTNTALK@gmail.com</p>#陳逸南 #其他 #第四組 #人民參與審判
+- <p>陳逸南</p><p>此次司法改革國是會議過程中，傳出一種奇怪的論調，現行司法審判不敢引進英美法系的「陪審制」，其原因之一為台灣黑道勢力很大，如果貿然引進「陪審制」，對於參與審判陪審員的身家安全，恐有不利的後果，看起來好像「司法怕黑道」，這樣有公義嗎？</p><p>司法怕黑道有公義嗎？（資料照，記者叢昌瑾攝）</p><p>近日，返台度假的張榮先生（228事件的間接受害者之一）表示，他在旅居加拿大多年，參與多項社區活動，他發現加拿大的司法審判實施「陪審制」非常有成效，對於人權保障貢獻很大。如果人民沒有「免於恐懼的自由」，那麼生活在沒有公義的社會，想要希望政府保護人性尊嚴，根本不用談了。</p><p>國際法專家謝淑媛教授在2010年10月發表「台灣國民應有的法律知識」一文（收錄在《臺灣的品格》李學圖編著第231~234頁），她指出，公民是國家的主人，因此人民必須擁有基本的法律常識。政府立法要民主、司法要獨立、人民須保障、人民結社應自由、集會也該自由、言論更要自由、宗教也是自由的、環境則必須保護等。…….不論是憲法、民法、刑法及其關係法規，乃至行政法規，人民均須有基礎的瞭解，方能明白個人的權利義務，以及政府的權利義務。是故，一般人民才不會相信傳統的觀念：法院是違法的「壞人」才去的。正直守法的「好人」也要去法院支持公義、維護人民的權利。</p><p>由此可知，「好人」、「壞人」都要常去法院，關心司法制度的正當運作。因為臺灣仍有一些司法敗類，才讓黑道勢力有機會傷害人權，令人憂心。期盼在此次司法改革，大家勇敢地站出來參與，並表示意見，希望臺灣明天會更好。</p><p>（台灣北社理事）</p>#陳逸南 #其他 #第四組 #人民參與審判
 
 # 陳昱奉
 ## backgrounds
@@ -998,11 +998,11 @@
 
 # 吳東都
 ## backgrounds
-- 其他
+- 法官
 
 ## articles
 ### 2017/03/07 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170307/1070388/
-- <p>吳東都／最高行政法院庭長</p><p>司法國是會議登場，可說是開場「轟動」，標題「聳動」。有倚老賣老者，有大媽發飆者，更有被質疑酒駕不適合主事者，來個「神之語」：「沒有人是完美的」(殊不知別人在指酒駕是大缺陷)。中間還有委員「烏龍」律師串場，好不熱鬧！</p><p>此次司法國是會議標榜參與的委員「非法律人過半」是「大賣點」，筆者則認為「非法律人過半」是「大敗點」。關心司法，人人有責。任何人都可以對司法表達感受及提出看法與希望，但決定司法政策，是專業性工作。</p><p>我國法治現代化的時間不長，法治教育不彰，國人大多欠缺法治國家的基本觀念(例如權力分立、司法獨立、正當法律程序)，非法律人在短時間的會議裡，很容易在對議題不知、一知半解，甚至誤解下舉手表決。我們所效仿的美國及德國法治開發國家，哪一次決定司法政策是「非法律人過半」？ 「非法律人過半」如果這麼好用，何不來個「全部非法律人」的司法國是會議？</p><p>筆者關心國家的經濟政策，對一些經濟現象也不滿，更對國家的經濟有些希望，但我絕對不敢參與國家經濟政策的決定，雖然筆者還修過經濟學。除了佩服此次參與會議「非法律人」的熱心公益精神外，還要「讚歎」咱台灣人的「憨膽」！</p><p>任何大型的會議，想要在短時間內對眾多議題有結論，慣用的手法就是「綁標」，也就是「綁人」及「綁議題」，所差的只是「手路」的粗細而已。此次司法國是會議也不例外。「綁人」，就是會議找「盟友」而不找「諍友」：「綁標」，就是對議題「先射箭」(有結論)再「畫靶」。此次法曹協會理事長投書其協會未接獲總統府推薦邀請函：主事者在尚未討論前，不經意地對議題講出如何的「好方向」及「結論」，只是明證之一二。</p><p>然而，討論司改議題要得出適切的解決方法，必須要客觀地正反意見辯證。這就要如同電視名嘴常說的美國總統林肯組「政敵團隊」辦國政，小英總統應組「諍友司改會」行司改。委員以不向審檢辯學一方傾斜的心，長時間研究得出解決方案，不同意見委員也可以提出不同意見書。行政部門認為可行，納為司法政策，提出完整法案於有民意代表性的立法院。不同意官方法案的民間團體或個人，也可以透過立法委員提出對案。總統責成其在立法院的黨員同志認真審議，制定法律後由主管機關執行。這才是「責任政治」呀！</p><p>遺憾的是，此次司改國是會議委員既「民意代表性全無」，又「專業不過半」，如果經短時間的會議，對於包山包海的司法議題所達成的「結論」，就要使立法院成為橡皮圖章，主管行政部門照章辦事，豈不反智？其實，這樣的國是會議，如同放司法煙火，施放期間讓一些人「high」一下，放完後製造一堆垃圾，再叫司法院及法務部去收拾。唉，這樣搞法，司法不倒也要倒。</p><p>看來如同周處除三害，先除自己一害。司法，眼前最需要改革的，是「司法改革」！</p>#吳東都 #其他 #議事程序
+- <p>吳東都／最高行政法院庭長</p><p>司法國是會議登場，可說是開場「轟動」，標題「聳動」。有倚老賣老者，有大媽發飆者，更有被質疑酒駕不適合主事者，來個「神之語」：「沒有人是完美的」(殊不知別人在指酒駕是大缺陷)。中間還有委員「烏龍」律師串場，好不熱鬧！</p><p>此次司法國是會議標榜參與的委員「非法律人過半」是「大賣點」，筆者則認為「非法律人過半」是「大敗點」。關心司法，人人有責。任何人都可以對司法表達感受及提出看法與希望，但決定司法政策，是專業性工作。</p><p>我國法治現代化的時間不長，法治教育不彰，國人大多欠缺法治國家的基本觀念(例如權力分立、司法獨立、正當法律程序)，非法律人在短時間的會議裡，很容易在對議題不知、一知半解，甚至誤解下舉手表決。我們所效仿的美國及德國法治開發國家，哪一次決定司法政策是「非法律人過半」？ 「非法律人過半」如果這麼好用，何不來個「全部非法律人」的司法國是會議？</p><p>筆者關心國家的經濟政策，對一些經濟現象也不滿，更對國家的經濟有些希望，但我絕對不敢參與國家經濟政策的決定，雖然筆者還修過經濟學。除了佩服此次參與會議「非法律人」的熱心公益精神外，還要「讚歎」咱台灣人的「憨膽」！</p><p>任何大型的會議，想要在短時間內對眾多議題有結論，慣用的手法就是「綁標」，也就是「綁人」及「綁議題」，所差的只是「手路」的粗細而已。此次司法國是會議也不例外。「綁人」，就是會議找「盟友」而不找「諍友」：「綁標」，就是對議題「先射箭」(有結論)再「畫靶」。此次法曹協會理事長投書其協會未接獲總統府推薦邀請函：主事者在尚未討論前，不經意地對議題講出如何的「好方向」及「結論」，只是明證之一二。</p><p>然而，討論司改議題要得出適切的解決方法，必須要客觀地正反意見辯證。這就要如同電視名嘴常說的美國總統林肯組「政敵團隊」辦國政，小英總統應組「諍友司改會」行司改。委員以不向審檢辯學一方傾斜的心，長時間研究得出解決方案，不同意見委員也可以提出不同意見書。行政部門認為可行，納為司法政策，提出完整法案於有民意代表性的立法院。不同意官方法案的民間團體或個人，也可以透過立法委員提出對案。總統責成其在立法院的黨員同志認真審議，制定法律後由主管機關執行。這才是「責任政治」呀！</p><p>遺憾的是，此次司改國是會議委員既「民意代表性全無」，又「專業不過半」，如果經短時間的會議，對於包山包海的司法議題所達成的「結論」，就要使立法院成為橡皮圖章，主管行政部門照章辦事，豈不反智？其實，這樣的國是會議，如同放司法煙火，施放期間讓一些人「high」一下，放完後製造一堆垃圾，再叫司法院及法務部去收拾。唉，這樣搞法，司法不倒也要倒。</p><p>看來如同周處除三害，先除自己一害。司法，眼前最需要改革的，是「司法改革」！</p>#吳東都 #法官 #議事程序
 
 # 吳景欽
 ## backgrounds
@@ -1094,7 +1094,7 @@
 
 ## articles
 ### 2017/03/03 GMT0+8:00 http://talk.ltn.com.tw/article/breakingnews/1991796
-- <p>◎許正餘</p><p>值此時刻，由總統府召開的司法改革國是會議正緊鑼密鼓。想當然，其重點之一應是還司法與民，以達成民有、民治、民享的民主社會。而浩鼎案開庭的合議裁決對翁啟惠前院長維持境管，直讓矽谷科技人梁耕三、陳濟棠覺得：翁先生的成就是台灣的榮耀，何以用逃跑、限制出境侮辱其人格？陳逸南也進一步強調政府應維護人性尊嚴。</p><p>浩鼎案開庭的合議裁決對翁啟惠前院長維持境管，直讓矽谷科技人梁耕三、陳濟棠覺得：翁先生的成就是台灣的榮耀，何以用逃跑、限制出境侮辱其人格？（資料照，記者方賓照攝）</p><p>可見司法專業固然重要，但社會的常識解讀，可以帶來人文、人性、人道的看法，假如不是更重要，也是必要的考量。兩者的和諧共識，會激起智慧的火花。這應該是西方國家採用陪審團的目的與功效之一。智慧的判案，必然超越法律的條文精神，由尋覓人情之常，得以找得人本的決議，成為不朽的判例、法學的楷模。此可由快炙人口的所羅門王智慧斷案的古代故事得到一些啟示：所羅門下令要把兩婦人爭奪的男嬰劈成兩半，一人一半。結果，懇求所羅門把孩子給對方的慈悲婦人才是孩子的真正母親，所羅門王就把孩子交給她。</p><p>近代的智慧斷案故事其實例子很多。網路上流傳一個交通法庭的判案實錄：法官將一位違犯交通法規的大人帶到法庭的小孩，請到法台，抱著他在膝上，一起辦案。他問小孩，爸爸是不是犯了錯，小孩答說：『是的』。又問是否該罰款，小孩也同意。法官建議『罰這些錢好嗎？』小孩笑著點點頭。法官就這樣作了判決。但是他說，錢不必繳給政府，只要老爹帶小孩一起去吃一頓豐富的午餐。法官看得到這是一個生活拮据的勞工家庭，連請保姆照顧小孩幾個鐘頭都張羅不來。這樣的判決達到了情理法兼顧的善境。</p><p>另外，因欠債而受牢獄之災的仍存在世界。愛爾蘭一位單親媽媽因沒能繳納電視牌照稅，而被關到監獄。雖然美國多數州已規定除非沒出席債務協調的法庭，不可因欠債而判坐牢。密蘇里州去年底有位單親媽，因付不出一千七百美元的交通違規罰款，被逮捕監禁兩周。她住的Foristell市雖只有五百人，但市府一年的罰款所得高達兩百七十萬。暴政與否，不言而喻。反之，在可以囚禁欠債人的州，就有法官裁決不能因人窮欠債而罰坐牢。顯然，法條雖跟不上時代，但是法官的一個智慧判例，已突破了這窼臼。而歐巴馬的司法部，去年也公告周知因付不起，而不是不願付債的人，不得判坐牢。剛立了停車牌，通常警察只給予警告，而不罰款，因多數人常因慣性使然，沒認識到新的指示牌。不知不罪，正是自古以來，人道的自然。</p><p>回到浩鼎案，翁前院長在被起訴之後，也出國開會。開完會，也回國面對指控。一個學者的聲譽，常常是鼎立社會的台柱，也是學者的所最珍惜。如聖經所言，『無罪者扔第一塊石頭』。假如以翁前院長在國際及台灣的貢獻，有對等於他的貢獻者請扔第一塊石頭。當馬前總統在十幾、近二十個案子且有違法、違憲的刑案纏身之際，蔡總統顯然仍以『無罪，直到證明有罪』的原則批准出國。限制翁前院長的出境，絕對不是一個智慧的判例。新北市王聖文副局長的自殺，顯示法官的自由心證，很可能成迫害的利器。反之，商業大亨淘空金融的王又曾則遨遊中美，無需面對法院的審判。如果法院只能辦窮人和古意人，司法改革，任重而道遠。再不還司法予民，由人民來參與審判，恐怕台灣的民主也如同龜裂的屋頂，不下雨的時候，也是完美不漏水的。</p><p>（作者為北美洲台灣人教授協會會員）</p><p>《自由開講》是一個提供民眾對話的電子論壇，不論是對政治、經濟或社會、文化等新聞議題，有意見想表達、有話不吐不快，都歡迎你熱烈投稿。文長700字內為優，來稿請附真實姓名（必寫。有筆名請另註）、職業、聯絡電話、E-mail帳號。本報有錄取及刪修權，不付稿酬；錄用與否將不另行通知。投稿信箱：LTNTALK@gmail.com</p>#許正餘 #學者 #個案
+- <p>◎許正餘</p><p>值此時刻，由總統府召開的司法改革國是會議正緊鑼密鼓。想當然，其重點之一應是還司法與民，以達成民有、民治、民享的民主社會。而浩鼎案開庭的合議裁決對翁啟惠前院長維持境管，直讓矽谷科技人梁耕三、陳濟棠覺得：翁先生的成就是台灣的榮耀，何以用逃跑、限制出境侮辱其人格？陳逸南也進一步強調政府應維護人性尊嚴。</p><p>浩鼎案開庭的合議裁決對翁啟惠前院長維持境管，直讓矽谷科技人梁耕三、陳濟棠覺得：翁先生的成就是台灣的榮耀，何以用逃跑、限制出境侮辱其人格？（資料照，記者方賓照攝）</p><p>可見司法專業固然重要，但社會的常識解讀，可以帶來人文、人性、人道的看法，假如不是更重要，也是必要的考量。兩者的和諧共識，會激起智慧的火花。這應該是西方國家採用陪審團的目的與功效之一。智慧的判案，必然超越法律的條文精神，由尋覓人情之常，得以找得人本的決議，成為不朽的判例、法學的楷模。此可由快炙人口的所羅門王智慧斷案的古代故事得到一些啟示：所羅門下令要把兩婦人爭奪的男嬰劈成兩半，一人一半。結果，懇求所羅門把孩子給對方的慈悲婦人才是孩子的真正母親，所羅門王就把孩子交給她。</p><p>近代的智慧斷案故事其實例子很多。網路上流傳一個交通法庭的判案實錄：法官將一位違犯交通法規的大人帶到法庭的小孩，請到法台，抱著他在膝上，一起辦案。他問小孩，爸爸是不是犯了錯，小孩答說：『是的』。又問是否該罰款，小孩也同意。法官建議『罰這些錢好嗎？』小孩笑著點點頭。法官就這樣作了判決。但是他說，錢不必繳給政府，只要老爹帶小孩一起去吃一頓豐富的午餐。法官看得到這是一個生活拮据的勞工家庭，連請保姆照顧小孩幾個鐘頭都張羅不來。這樣的判決達到了情理法兼顧的善境。</p><p>另外，因欠債而受牢獄之災的仍存在世界。愛爾蘭一位單親媽媽因沒能繳納電視牌照稅，而被關到監獄。雖然美國多數州已規定除非沒出席債務協調的法庭，不可因欠債而判坐牢。密蘇里州去年底有位單親媽，因付不出一千七百美元的交通違規罰款，被逮捕監禁兩周。她住的Foristell市雖只有五百人，但市府一年的罰款所得高達兩百七十萬。暴政與否，不言而喻。反之，在可以囚禁欠債人的州，就有法官裁決不能因人窮欠債而罰坐牢。顯然，法條雖跟不上時代，但是法官的一個智慧判例，已突破了這窼臼。而歐巴馬的司法部，去年也公告周知因付不起，而不是不願付債的人，不得判坐牢。剛立了停車牌，通常警察只給予警告，而不罰款，因多數人常因慣性使然，沒認識到新的指示牌。不知不罪，正是自古以來，人道的自然。</p><p>回到浩鼎案，翁前院長在被起訴之後，也出國開會。開完會，也回國面對指控。一個學者的聲譽，常常是鼎立社會的台柱，也是學者的所最珍惜。如聖經所言，『無罪者扔第一塊石頭』。假如以翁前院長在國際及台灣的貢獻，有對等於他的貢獻者請扔第一塊石頭。當馬前總統在十幾、近二十個案子且有違法、違憲的刑案纏身之際，蔡總統顯然仍以『無罪，直到證明有罪』的原則批准出國。限制翁前院長的出境，絕對不是一個智慧的判例。新北市王聖文副局長的自殺，顯示法官的自由心證，很可能成迫害的利器。反之，商業大亨淘空金融的王又曾則遨遊中美，無需面對法院的審判。如果法院只能辦窮人和古意人，司法改革，任重而道遠。再不還司法予民，由人民來參與審判，恐怕台灣的民主也如同龜裂的屋頂，不下雨的時候，也是完美不漏水的。</p><p>（作者為北美洲台灣人教授協會會員）</p>#許正餘 #學者 #個案
 
 # 許宗力
 ## backgrounds
@@ -1399,6 +1399,7 @@ ___
     - 蘇永欽
     - 孫健智
     - 王子榮
+    - 吳東都
     - 蕭淳尹
     - 楊昱辰
     - 張淵森
@@ -1498,7 +1499,6 @@ ___
     - 王美琇
     - 王芝芝
     - 吳典蓉
-    - 吳東都
     - 夏珍
     - 蕭白雪
     - 蕭忠漢
