--- a/md/總統府司法改革國是會議相關投書彙整.md
+++ b/md/總統府司法改革國是會議相關投書彙整.md
@@ -498,11 +498,11 @@
 
 # 交通大學科技法律學院地院實習課程學生
 ## backgrounds
-- 律師
+- 其他
 
 ## articles
 ### 2017/03/01 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170301/1066655/
-- <h2>【司改交鋒】你所不知道的法官生活</h2><p>交通大學科技法律學院地院實習課程學生（三位學生均曾參與司法實習、並通過律師高考）國立交通大學科技法律學院開設「司法實習」課程歷時已有十年，我們有幸在就讀期間參與實習課程、近距離與法官一對一學習，因此希望能將法官的工作常態傳達出去，讓大眾更了解法院的運作。就一般人而言，對於法官的印象，就是開庭時、穿著藍色法袍的形象，而卸下法袍後，法官在做些什麼？可能包括在開庭前要熟悉案情、出外勤進行勘驗、參與相關進修課程，其中一項很重要的工作，就是閱讀卷宗、研究當事人所呈報的各件狀紙與主張內容，再就雙方爭執進一步研究、搜索相關的實務判決，才能進行判決與裁定的撰寫。每個案件雖有不同，但以基本的案情而言，起訴狀、答辯狀、補充理由狀、陳報狀、綜合辯論意旨狀，原被告雙方加起來可能有近十份，與案件相關的實務判決可能有幾十個，法官手上的案件新舊加起來大概也有五十件上下，其工作量與壓力，可見一斑。尤其像重金庭案件的卷宗數量，少則堆達半個人的身高，多則堆滿一室，法官每天要面對複雜的金融犯罪、或者是令人糾結的家事紛爭，不僅精神上壓迫、現實上更有結案的壓力。這樣的生活，若不是對於追求公平正義充滿熱忱，一般人實在是不會想要選擇這種「固定薪水，案件吃到飽」的生活。有的案件，可能只有一把凶刀、一具屍體，必須實際勘驗，從茫茫的事實中找到證據，勾勒出事實的樣貌；法官面對龐大的案件數量，仍必須把自己當作一張白紙，在不善的面前秉持公正，雖有結案壓力，但未能透過充分的證據或法律依據去獲得足夠強烈的心證，也不輕易結案或宣判。這些可能是多數基層法官、檢察官的日常，卻是為一般民眾所不知的細節。而實際走入法院一段時間，才會恍然領悟到一個簡單卻容易被忽略的事實：那就是法官以及所有司法從業人員其實都只是一般人，都有自己的生活，以及自己的處事態度、價值觀，但卻要面對一般人所不會體驗到的各種人生故事。他們不是神，卻被要求從客觀、中立的角度評斷孰是孰非，有時更要面對重大案件的輿論壓力，其所承擔的責任如此之重，審判者、追訴者的工作，實非容易。每個工作都有各自不為人知的辛勞與付出，參與實習的過程中，我們看見的是法官與檢察官面對龐大案件量的現實壓力，同時又要為案件中的權益情理耗竭心力，真的不是一個簡單的工作。我們作為學生，明白自身的歷練與學習仍大不足、故仍在持續精進，只能如實說明我們所看到的法院生活。我們了解司法改革的必要，也不可否認確實有人會自恃為法官而待人刻薄，或未能保持應有的品性與操守，而這樣的人不論在任何職場上都有。但是，我們實習期間所見過的法官，我們都未曾見到他們與當事人有任何不宜或過度的接觸，均是富有學養、待人和善，盡心盡力為了追求公平正義而犧牲自己的生活品質的司法人員。這些法官不惜加重自己工作負擔，為提攜司法界後輩而應允指導實習生，卻因為少數幾位不稱職司法人員，而受到全面的攻擊，讓我們為這些為了司法奉獻努力的法官感到不平。希望大家在關注、監督司改國是會議的同時，也能給予清廉、公正的司法從業人員一定的支持，相信人民的信賴不僅能讓法官與檢察官更有信心，也是司法改革成功的一大關鍵。</p> #交通大學科技法律學院地院實習課程學生 #律師 #第二組 #法官過勞 #2017-03-01
+- <h2>【司改交鋒】你所不知道的法官生活</h2><p>交通大學科技法律學院地院實習課程學生（三位學生均曾參與司法實習、並通過律師高考）國立交通大學科技法律學院開設「司法實習」課程歷時已有十年，我們有幸在就讀期間參與實習課程、近距離與法官一對一學習，因此希望能將法官的工作常態傳達出去，讓大眾更了解法院的運作。就一般人而言，對於法官的印象，就是開庭時、穿著藍色法袍的形象，而卸下法袍後，法官在做些什麼？可能包括在開庭前要熟悉案情、出外勤進行勘驗、參與相關進修課程，其中一項很重要的工作，就是閱讀卷宗、研究當事人所呈報的各件狀紙與主張內容，再就雙方爭執進一步研究、搜索相關的實務判決，才能進行判決與裁定的撰寫。每個案件雖有不同，但以基本的案情而言，起訴狀、答辯狀、補充理由狀、陳報狀、綜合辯論意旨狀，原被告雙方加起來可能有近十份，與案件相關的實務判決可能有幾十個，法官手上的案件新舊加起來大概也有五十件上下，其工作量與壓力，可見一斑。尤其像重金庭案件的卷宗數量，少則堆達半個人的身高，多則堆滿一室，法官每天要面對複雜的金融犯罪、或者是令人糾結的家事紛爭，不僅精神上壓迫、現實上更有結案的壓力。這樣的生活，若不是對於追求公平正義充滿熱忱，一般人實在是不會想要選擇這種「固定薪水，案件吃到飽」的生活。有的案件，可能只有一把凶刀、一具屍體，必須實際勘驗，從茫茫的事實中找到證據，勾勒出事實的樣貌；法官面對龐大的案件數量，仍必須把自己當作一張白紙，在不善的面前秉持公正，雖有結案壓力，但未能透過充分的證據或法律依據去獲得足夠強烈的心證，也不輕易結案或宣判。這些可能是多數基層法官、檢察官的日常，卻是為一般民眾所不知的細節。而實際走入法院一段時間，才會恍然領悟到一個簡單卻容易被忽略的事實：那就是法官以及所有司法從業人員其實都只是一般人，都有自己的生活，以及自己的處事態度、價值觀，但卻要面對一般人所不會體驗到的各種人生故事。他們不是神，卻被要求從客觀、中立的角度評斷孰是孰非，有時更要面對重大案件的輿論壓力，其所承擔的責任如此之重，審判者、追訴者的工作，實非容易。每個工作都有各自不為人知的辛勞與付出，參與實習的過程中，我們看見的是法官與檢察官面對龐大案件量的現實壓力，同時又要為案件中的權益情理耗竭心力，真的不是一個簡單的工作。我們作為學生，明白自身的歷練與學習仍大不足、故仍在持續精進，只能如實說明我們所看到的法院生活。我們了解司法改革的必要，也不可否認確實有人會自恃為法官而待人刻薄，或未能保持應有的品性與操守，而這樣的人不論在任何職場上都有。但是，我們實習期間所見過的法官，我們都未曾見到他們與當事人有任何不宜或過度的接觸，均是富有學養、待人和善，盡心盡力為了追求公平正義而犧牲自己的生活品質的司法人員。這些法官不惜加重自己工作負擔，為提攜司法界後輩而應允指導實習生，卻因為少數幾位不稱職司法人員，而受到全面的攻擊，讓我們為這些為了司法奉獻努力的法官感到不平。希望大家在關注、監督司改國是會議的同時，也能給予清廉、公正的司法從業人員一定的支持，相信人民的信賴不僅能讓法官與檢察官更有信心，也是司法改革成功的一大關鍵。</p> #交通大學科技法律學院地院實習課程學生 #其他 #第二組 #法官過勞 #2017-03-01
 
 # 金恒煒
 ## backgrounds
@@ -1575,7 +1575,6 @@ ___
     - 黃盈嘉
     - 黃致豪
     - 江榮祥
-    - 交通大學科技法律學院地院實習課程學生
     - 李漢中
     - 林騰鷂
     - 林宗翰
@@ -1615,6 +1614,7 @@ ___
     - 洪文玲
     - 簡嘉達
     - 蔣念祖
+    - 交通大學科技法律學院地院實習課程學生
     - 金恒煒
     - 黎家維
     - 李保明
