use date to sort articles

--- a/md/總統府司法改革國是會議相關投書彙整.md
+++ b/md/總統府司法改革國是會議相關投書彙整.md
@@ -1002,11 +1002,11 @@
 
 # 孫斌
 ## backgrounds
-- 其他
+- 律師
 
 ## articles
 ### 2016/06/02 GMT0+8:00 http://pnn.pts.org.tw/main/2016/06/02/%E5%BE%8B%E5%B8%AB%E5%88%B6%E5%BA%A6%E6%94%B9%E9%9D%A9%E7%9A%84%E7%AC%AC%E4%B8%80%E5%93%A9%E8%B7%AF/
-- <h2>律師制度改革的第一哩路</h2><p>文 / 孫斌</p><p>日前蔡英文總統在就職演說中，明白將司法改革列為新政府施政重點，得到觀禮民眾一片歡呼，顯見司法改革有其急迫性與必要性。律師作為法律專業人員，自然也是要被改革的對象之一。</p><p>律師制度改革的第一哩路，就是律師法修法。事實上，律師界也早就意識到現行律師法不合時宜，已經到了不能不修的程度了。但是說來奇怪，律師法自從民國91年修正之後，至今超過14年的期間，只修正過2條（嚴格來說只有修正第4條，第53條是因為第4條修正而配套修正）；主管機關法務部及立委每每提出修正草案，最後都不了了之，理由何在？</p><p>今年4月份，行政院與民間司法改革基金會（簡稱司改會）合作，以網路平台方式詢問律師及一般民眾對於律師制度的想法。問卷的內容包括「單一入會、全國執業」、「律師是否應提供公益服務時數」與「如何維持律師品質」三個面向。網路問卷平台一推出，馬上吹皺一池春水，中華民國律師公會全國聯合會（簡稱全聯會）及部分地方律師公會，針對「單一入會、全國執業」這個項目，表達強烈不滿。在後續數場針對律師法修法所舉辦的公聽會上，這個議題更成為各方關注的焦點，攻防激烈。</p><p>這個茶壺內的風暴，不但具體地呈現出，律師法修法困難的原因，更凸顯了目前律師與律師公會之間的矛盾。在複雜的利害糾葛之下，律師制度改革的第一哩路，可說是舉步維艱。</p><p>什麼是單一入會全國執業？</p><p>單一入會全國執業這個議題，在律師界早已不是新鮮事了。事實上，早在民國89年的全聯會中，就已經提出這個議題。但為了讓不是律師的讀者容易理解，且讓本文囉嗦一下。</p><p>依照現行律師法的規定，律師必須加入事務所所在地及執行職務所在地的地方律師公會，否則會受懲戒。舉例來說，A律師在台中開事務所，依法必須加入台中律師公會成為會員，如果有天A律師因為案件需要，必須去高雄地方法院開庭，A律師還必須加入高雄律師公會成為會員，否則就會遭受懲戒。而所謂「單一入會全國執業」，就是希望打破這個限制，讓A律師不用再去加入高雄律師公會，就可以去高雄地方法院開庭，而不會遭受懲戒。</p><p>現行制度有什麼問題？為何要倡議單一入會全國執業？</p><p>跨區執業，也就是律師到事務所所在地以外的地方（外地）執行業務，可說是目前台灣律師界的常態。由於訴訟法上管轄的規定，當事人委任律師處理案件，時常需要律師到外地法院開庭；律師陪同或代理當事人到外地進行商業談判、協商解決紛爭、出席各類型會議等，也十分常見。</p><p>或許有讀者會想，全台灣也就16個地方律師公會，律師就花點功夫填申請表，成為16個公會的會員，不就可以全台灣跑透透了嗎？</p><p>但事情沒這麼簡單。加入律師公會要繳入會費，全台灣16個地方律師公會，入會費金額從2萬元（高雄）至5萬元（花蓮、台東）不等，算算一名律師若要加入全台灣16個地方律師公會，必須先拿出46萬2500元。入會之後，每個月還要繳交月會費，月會費金額從300元（基隆）至720元（台中）不等，算算一名律師如果要維持全台灣16個地方律師公會的會籍，每個月要繳9320元。所以原則上，律師會盡可能壓低自己加入的律師公會數量。當加入全台灣16個地方律師公會，因為成本考量而變得現實上不可行，很多困擾就因此產生。</p><p>當案件需要到外地去處理，而律師又正好不是該地律師公會的會員時，律師就要判斷，處理這個案件，是否屬於「執行職務」？如果是，就要加入該地律師公會；如果不是，就不用入會。這個判斷如果錯了，不是被懲戒，就是花冤枉錢；這造成律師執業上不小的風險。法務部陸續作出很多關於「是否為律師法上執行職務」的函釋，原因在此。</p><p>接下來的情境更是每個律師都曾經碰到的。當事人想要委任認識的律師來處理案件，律師聽完告訴他說：這個案子必須到外地處理，但我不是該地律師公會的會員。這時該怎麼辦？律師可以自行吸收加入外地律師公會的入會費，但如此將壓縮到律師辦案的合理利潤；若要當事人負擔，則要考慮當事人的意願。當事人也同樣為難，如果想要繼續委任這名律師處理案件，則除了原本應支付的律師酬金外，可能還必須幫這名律師負擔外地律師公會的入會費；否則就必須另尋其他可信賴的當地律師。</p><p>總之，無論是律師承接案件的自由，還是當事人選擇律師的自由，在現行制度之下，都受到一定程度的限制。正因為如此，才不斷有人倡議單一入會全國執業。</p><p>誰在贊成？誰在反對？</p><p>依照上述分析，「單一入會全國執業」看來像是個利大於弊的制度。事實上，多數律師也支持這個制度。針對「單一入會全國執業」這個議題，法務部在民國96年曾經向各地方律師公會會員（律師）進行抽樣調查，當時有815名律師同意（有效問卷1201份，佔有效樣本67.9%）在事務所所在地以外地區執業，不需要加入當地律師公會（資料引自顧立雄立委臉書）。而本文先前提到今年4月舉辦的網路問卷調查中，更有高達94.5%的律師贊成（共1696名律師填寫問卷，1602人贊成）落實「單一入會全國執業」（資料引自司改會網站）。</p><p>但是今年5月4日在行政院舉辦的公聽會、5月14日在台北律師公會舉辦的公聽會以及5月27日在立法院舉辦的公聽會中，我們可以聽到很多地方律師公會及全聯會推派的代表，反對「單一入會全國執業」。此外，如前所述，早在今年4月推出網路問卷時，地方律師公會及全聯會就在網站上，發出各種質疑問卷及「單一入會全國執業」的聲明。</p><p>為什麼多數律師的意見與地方律師公會的意見不同？</p><p>律師與地方律師公會之間的矛盾</p><p>讀者或許已經猜到問題的癥結點在哪裡了。總之，就是律師與地方律師公會的利害不一致。</p><p>依照現行律師法的規定，地方律師公會由律師組成。但是很多律師其實對地方律師公會有相當程度的疏離感。有些地方律師公會採行「會員代表」制，數人一組，互選一人當代表，再由這些會員代表開會，「間接」選出公會的理監事及全聯會代表，這個作法更加深了疏離感；公會的理監事好像跟一般律師會員之間好像沒什麼關聯。律師公會對於很多律師而言，惟一的存在感就是每年要來收一次保護費（即月會費）。</p><p>律師對於地方律師公會無感，會費自然繳得心不甘情不願。推行單一入會全國執業，只繳一個律師公會的入會費及月會費即可，理論上可以大幅降低執業的費用支出，對律師個人而言何樂而不為？但律師所繳入會費及月會費，是地方律師公會生存的命脈，律師想要單一入會全國執業，地方律師公會豈會善罷甘休？矛盾於焉而生。</p><p>各地方律師公會之間的差異</p><p>依照目前大家的想像，實施「單一入會全國執業」之後，律師將只加入事務所所在地的律師公會，而退出其他外地律師公會。這會使得目前各公會的外地會員消失，只剩下在地會員。</p><p>如果這個想像是正確的，那麼實施「單一入會全國執業」之後，有些地方律師公會將只剩下不到100人左右的會員，彰化及嘉義律師公會大概可以維持100人出頭的會員，新竹、桃園及台南這三個律師公會會員人數大約200至500間，台中及高雄律師公會大概可以維持650人以上的會員人數。至於台北律師公會，似乎還是可維持5000人以上的會員。</p><p>會員人數減少不但造成入會費及月會費收入減少，也影響各律師公會在全聯會中的影響力，對地方律師公會的影響不可謂小。但以目前粗略的評估看來，台北律師公會所受到的衝擊是最小的，這就是為什麼當台北律師公會推派的代表，發言支持單一入會全國執業時，其他地方律師公會會抨擊說這是從台北看天下了。</p><p>全聯會的立場不等於律師界的共識</p><p>那麼全聯會的立場又是什麼呢？依照現行律師法的規定，全聯會由全台灣16個地方律師公會組成；個別律師並非全聯會的會員。全聯會的最高組織，是會員代表大會，成員就是各地方律師公會派出的「全聯會代表」。依照全聯會章程第4條第2項規定：「每一會員公會按其所屬律師人數，依左列規定選派會員代表：一、未滿五十人之公會，得選派代表三人。二、滿五十人以上之公會，每增五十人得增選會員代表一人，但最多不得超過十五人。」，說得簡單一點，地方律師公會的會員人數再多，最多也只能派出15名全聯會代表，投15張票。算數好一點的讀者應該可以算出，當地方律師公會的會員人數超過650人時，15人的限額就滿了。說得更直白一點，一個會員650人的地方律師公會，在全聯會裡擁有與台北律師公會一樣大的權利。</p><p>所以說，全聯會章程中會員代表人數的限制，有利於人數較少的地方律師公會表達意見，人數多的地方律師公會，例如台北律師公會，反而無法影響全聯會的運作。</p><p>現行全聯會章程所造成的結果是，全聯會的立場，嚴格來說僅能反映部分地方律師公會的意見，能否代表多數律師的意見，值得懷疑。這也就是為什麼當全聯會強調「當年的共識」時，我們不能不加辨別地將之視為律師界的共識；我們必須追問，所謂的「共識」，到底是哪些團體還是哪些人，依照怎樣的程序所達成的共識。</p><p>當年的共識是什麼？</p><p>全聯會所謂「當年的共識」，指的就是「主、兼區制」。所謂的「主、兼區制」，簡單來說，就是律師到外地執行職務，還是要加入該地的地方律師公會，但是可以用「兼區會員」的名義加入。在制度設計上，「兼區會員」的入會費及月會費，視各地方律師公會會員人數，訂為主區會員的1/2或1/3。</p><p>「主、兼區制」是以維持現行制度為前提，並適度緩合律師負擔的替代方案，有其可取之處。但是在今年4月舉辦的網路問卷調查中，多數律師並沒有選擇這個替代方案，而是贊成採行單一入會全國執業制度；可見這個「當年的共識」並不是現在的共識。</p><p>律師界必須要正視的問題是，自從民國100年律師考試合格人數大增以來，律師界組成結構早與十年前大相逕庭。「當年」律師們評估可行的替代方案，現在的律師未必買單。誠信溝通才是化解歧異的最佳藥方，漠視新一代律師的選擇權，企圖迫使其接受前人的共識，效果恐怕適得其反。</p><p>單一入會全國執業真的不可行嗎？</p><p>事實上，立法院不久前才剛完成會計師法修正，會計師只要加入一個公會，就可以在全國執業。建築師法與技師法則更早就實施「單一入會，全國執業」的制度。這顯示，單一入會全國執業並非邏輯上不可行。</p><p>而設立律師公會最基本的目的，就是專業自治，也就是由律師公會來規範律師會員的執業行為。律師只要加入一個律師公會，就可以達成這個目的。現行制度為何規定律師要加入多個公會，才能跨區執業，理由不明。</p><p>反對單一入會全國執業的理由，主要還是擔心實施單一入會全國執業之後，會使得各地方律師公會式微或消失；尤其在財務資源大幅流失的情形下。但這個主張又牽扯出，各地方律師公會有無存在的必要性？各地方律師公會的核心任務是什麼？維持基本必要的運作需要多少花費？等等問題。要釐清這些問題，恐怕還得彙集各方意見，好好精算及對話一番。</p><p>律師制度改革的第一哩路有多長？</p><p>其實司改會今年推出網路問卷調查時，曾經列出律師法十大改革方向，包括(1)是否應落實「單一入會全國執業」制度？(2)律師是否應有公益時數？(3)律師事務所應否法人化？(4)律師事務所應否比照會計師執業賠償限制？(5)如何維繫律師之執業品質？(6)律師養成；(7)律師執業權益保障；(8)全聯會理事長及理監事是否應直選？(9)律師公會主管機關何屬？(10)律師懲戒委員會是否應移設於律師公會？等等。</p><p>結果光是在第一個問題上，律師界就已經因為「律師vs.公會」及「公會vs.公會」等利害不一致，爭執不休，迄今沒有定論。剩下9個涉及層面更廣，影響更深遠的問題，則律師界根本還沒有心思靜下心來討論。</p><p>律師制度正確的改革方向，理應著眼於建立健全的律師制度，而非只是一味追求律師乃至於律師公會的利益。律師法修法這個議題，前前後後已經講了十幾年，但是看到日前在立法院公聽會中來自各方律師代表的「嘉言懿行」之後，令人不禁擔心，律師制度改革的第一哩路，恐怕比想像中的遙遠許多。</p><p>本文作者為律師，民間司法改革基金會常務執行委員。</p> #孫斌 #其他 #單一入會 #2016-06-02
+- <h2>律師制度改革的第一哩路</h2><p>文 / 孫斌</p><p>日前蔡英文總統在就職演說中，明白將司法改革列為新政府施政重點，得到觀禮民眾一片歡呼，顯見司法改革有其急迫性與必要性。律師作為法律專業人員，自然也是要被改革的對象之一。</p><p>律師制度改革的第一哩路，就是律師法修法。事實上，律師界也早就意識到現行律師法不合時宜，已經到了不能不修的程度了。但是說來奇怪，律師法自從民國91年修正之後，至今超過14年的期間，只修正過2條（嚴格來說只有修正第4條，第53條是因為第4條修正而配套修正）；主管機關法務部及立委每每提出修正草案，最後都不了了之，理由何在？</p><p>今年4月份，行政院與民間司法改革基金會（簡稱司改會）合作，以網路平台方式詢問律師及一般民眾對於律師制度的想法。問卷的內容包括「單一入會、全國執業」、「律師是否應提供公益服務時數」與「如何維持律師品質」三個面向。網路問卷平台一推出，馬上吹皺一池春水，中華民國律師公會全國聯合會（簡稱全聯會）及部分地方律師公會，針對「單一入會、全國執業」這個項目，表達強烈不滿。在後續數場針對律師法修法所舉辦的公聽會上，這個議題更成為各方關注的焦點，攻防激烈。</p><p>這個茶壺內的風暴，不但具體地呈現出，律師法修法困難的原因，更凸顯了目前律師與律師公會之間的矛盾。在複雜的利害糾葛之下，律師制度改革的第一哩路，可說是舉步維艱。</p><p>什麼是單一入會全國執業？</p><p>單一入會全國執業這個議題，在律師界早已不是新鮮事了。事實上，早在民國89年的全聯會中，就已經提出這個議題。但為了讓不是律師的讀者容易理解，且讓本文囉嗦一下。</p><p>依照現行律師法的規定，律師必須加入事務所所在地及執行職務所在地的地方律師公會，否則會受懲戒。舉例來說，A律師在台中開事務所，依法必須加入台中律師公會成為會員，如果有天A律師因為案件需要，必須去高雄地方法院開庭，A律師還必須加入高雄律師公會成為會員，否則就會遭受懲戒。而所謂「單一入會全國執業」，就是希望打破這個限制，讓A律師不用再去加入高雄律師公會，就可以去高雄地方法院開庭，而不會遭受懲戒。</p><p>現行制度有什麼問題？為何要倡議單一入會全國執業？</p><p>跨區執業，也就是律師到事務所所在地以外的地方（外地）執行業務，可說是目前台灣律師界的常態。由於訴訟法上管轄的規定，當事人委任律師處理案件，時常需要律師到外地法院開庭；律師陪同或代理當事人到外地進行商業談判、協商解決紛爭、出席各類型會議等，也十分常見。</p><p>或許有讀者會想，全台灣也就16個地方律師公會，律師就花點功夫填申請表，成為16個公會的會員，不就可以全台灣跑透透了嗎？</p><p>但事情沒這麼簡單。加入律師公會要繳入會費，全台灣16個地方律師公會，入會費金額從2萬元（高雄）至5萬元（花蓮、台東）不等，算算一名律師若要加入全台灣16個地方律師公會，必須先拿出46萬2500元。入會之後，每個月還要繳交月會費，月會費金額從300元（基隆）至720元（台中）不等，算算一名律師如果要維持全台灣16個地方律師公會的會籍，每個月要繳9320元。所以原則上，律師會盡可能壓低自己加入的律師公會數量。當加入全台灣16個地方律師公會，因為成本考量而變得現實上不可行，很多困擾就因此產生。</p><p>當案件需要到外地去處理，而律師又正好不是該地律師公會的會員時，律師就要判斷，處理這個案件，是否屬於「執行職務」？如果是，就要加入該地律師公會；如果不是，就不用入會。這個判斷如果錯了，不是被懲戒，就是花冤枉錢；這造成律師執業上不小的風險。法務部陸續作出很多關於「是否為律師法上執行職務」的函釋，原因在此。</p><p>接下來的情境更是每個律師都曾經碰到的。當事人想要委任認識的律師來處理案件，律師聽完告訴他說：這個案子必須到外地處理，但我不是該地律師公會的會員。這時該怎麼辦？律師可以自行吸收加入外地律師公會的入會費，但如此將壓縮到律師辦案的合理利潤；若要當事人負擔，則要考慮當事人的意願。當事人也同樣為難，如果想要繼續委任這名律師處理案件，則除了原本應支付的律師酬金外，可能還必須幫這名律師負擔外地律師公會的入會費；否則就必須另尋其他可信賴的當地律師。</p><p>總之，無論是律師承接案件的自由，還是當事人選擇律師的自由，在現行制度之下，都受到一定程度的限制。正因為如此，才不斷有人倡議單一入會全國執業。</p><p>誰在贊成？誰在反對？</p><p>依照上述分析，「單一入會全國執業」看來像是個利大於弊的制度。事實上，多數律師也支持這個制度。針對「單一入會全國執業」這個議題，法務部在民國96年曾經向各地方律師公會會員（律師）進行抽樣調查，當時有815名律師同意（有效問卷1201份，佔有效樣本67.9%）在事務所所在地以外地區執業，不需要加入當地律師公會（資料引自顧立雄立委臉書）。而本文先前提到今年4月舉辦的網路問卷調查中，更有高達94.5%的律師贊成（共1696名律師填寫問卷，1602人贊成）落實「單一入會全國執業」（資料引自司改會網站）。</p><p>但是今年5月4日在行政院舉辦的公聽會、5月14日在台北律師公會舉辦的公聽會以及5月27日在立法院舉辦的公聽會中，我們可以聽到很多地方律師公會及全聯會推派的代表，反對「單一入會全國執業」。此外，如前所述，早在今年4月推出網路問卷時，地方律師公會及全聯會就在網站上，發出各種質疑問卷及「單一入會全國執業」的聲明。</p><p>為什麼多數律師的意見與地方律師公會的意見不同？</p><p>律師與地方律師公會之間的矛盾</p><p>讀者或許已經猜到問題的癥結點在哪裡了。總之，就是律師與地方律師公會的利害不一致。</p><p>依照現行律師法的規定，地方律師公會由律師組成。但是很多律師其實對地方律師公會有相當程度的疏離感。有些地方律師公會採行「會員代表」制，數人一組，互選一人當代表，再由這些會員代表開會，「間接」選出公會的理監事及全聯會代表，這個作法更加深了疏離感；公會的理監事好像跟一般律師會員之間好像沒什麼關聯。律師公會對於很多律師而言，惟一的存在感就是每年要來收一次保護費（即月會費）。</p><p>律師對於地方律師公會無感，會費自然繳得心不甘情不願。推行單一入會全國執業，只繳一個律師公會的入會費及月會費即可，理論上可以大幅降低執業的費用支出，對律師個人而言何樂而不為？但律師所繳入會費及月會費，是地方律師公會生存的命脈，律師想要單一入會全國執業，地方律師公會豈會善罷甘休？矛盾於焉而生。</p><p>各地方律師公會之間的差異</p><p>依照目前大家的想像，實施「單一入會全國執業」之後，律師將只加入事務所所在地的律師公會，而退出其他外地律師公會。這會使得目前各公會的外地會員消失，只剩下在地會員。</p><p>如果這個想像是正確的，那麼實施「單一入會全國執業」之後，有些地方律師公會將只剩下不到100人左右的會員，彰化及嘉義律師公會大概可以維持100人出頭的會員，新竹、桃園及台南這三個律師公會會員人數大約200至500間，台中及高雄律師公會大概可以維持650人以上的會員人數。至於台北律師公會，似乎還是可維持5000人以上的會員。</p><p>會員人數減少不但造成入會費及月會費收入減少，也影響各律師公會在全聯會中的影響力，對地方律師公會的影響不可謂小。但以目前粗略的評估看來，台北律師公會所受到的衝擊是最小的，這就是為什麼當台北律師公會推派的代表，發言支持單一入會全國執業時，其他地方律師公會會抨擊說這是從台北看天下了。</p><p>全聯會的立場不等於律師界的共識</p><p>那麼全聯會的立場又是什麼呢？依照現行律師法的規定，全聯會由全台灣16個地方律師公會組成；個別律師並非全聯會的會員。全聯會的最高組織，是會員代表大會，成員就是各地方律師公會派出的「全聯會代表」。依照全聯會章程第4條第2項規定：「每一會員公會按其所屬律師人數，依左列規定選派會員代表：一、未滿五十人之公會，得選派代表三人。二、滿五十人以上之公會，每增五十人得增選會員代表一人，但最多不得超過十五人。」，說得簡單一點，地方律師公會的會員人數再多，最多也只能派出15名全聯會代表，投15張票。算數好一點的讀者應該可以算出，當地方律師公會的會員人數超過650人時，15人的限額就滿了。說得更直白一點，一個會員650人的地方律師公會，在全聯會裡擁有與台北律師公會一樣大的權利。</p><p>所以說，全聯會章程中會員代表人數的限制，有利於人數較少的地方律師公會表達意見，人數多的地方律師公會，例如台北律師公會，反而無法影響全聯會的運作。</p><p>現行全聯會章程所造成的結果是，全聯會的立場，嚴格來說僅能反映部分地方律師公會的意見，能否代表多數律師的意見，值得懷疑。這也就是為什麼當全聯會強調「當年的共識」時，我們不能不加辨別地將之視為律師界的共識；我們必須追問，所謂的「共識」，到底是哪些團體還是哪些人，依照怎樣的程序所達成的共識。</p><p>當年的共識是什麼？</p><p>全聯會所謂「當年的共識」，指的就是「主、兼區制」。所謂的「主、兼區制」，簡單來說，就是律師到外地執行職務，還是要加入該地的地方律師公會，但是可以用「兼區會員」的名義加入。在制度設計上，「兼區會員」的入會費及月會費，視各地方律師公會會員人數，訂為主區會員的1/2或1/3。</p><p>「主、兼區制」是以維持現行制度為前提，並適度緩合律師負擔的替代方案，有其可取之處。但是在今年4月舉辦的網路問卷調查中，多數律師並沒有選擇這個替代方案，而是贊成採行單一入會全國執業制度；可見這個「當年的共識」並不是現在的共識。</p><p>律師界必須要正視的問題是，自從民國100年律師考試合格人數大增以來，律師界組成結構早與十年前大相逕庭。「當年」律師們評估可行的替代方案，現在的律師未必買單。誠信溝通才是化解歧異的最佳藥方，漠視新一代律師的選擇權，企圖迫使其接受前人的共識，效果恐怕適得其反。</p><p>單一入會全國執業真的不可行嗎？</p><p>事實上，立法院不久前才剛完成會計師法修正，會計師只要加入一個公會，就可以在全國執業。建築師法與技師法則更早就實施「單一入會，全國執業」的制度。這顯示，單一入會全國執業並非邏輯上不可行。</p><p>而設立律師公會最基本的目的，就是專業自治，也就是由律師公會來規範律師會員的執業行為。律師只要加入一個律師公會，就可以達成這個目的。現行制度為何規定律師要加入多個公會，才能跨區執業，理由不明。</p><p>反對單一入會全國執業的理由，主要還是擔心實施單一入會全國執業之後，會使得各地方律師公會式微或消失；尤其在財務資源大幅流失的情形下。但這個主張又牽扯出，各地方律師公會有無存在的必要性？各地方律師公會的核心任務是什麼？維持基本必要的運作需要多少花費？等等問題。要釐清這些問題，恐怕還得彙集各方意見，好好精算及對話一番。</p><p>律師制度改革的第一哩路有多長？</p><p>其實司改會今年推出網路問卷調查時，曾經列出律師法十大改革方向，包括(1)是否應落實「單一入會全國執業」制度？(2)律師是否應有公益時數？(3)律師事務所應否法人化？(4)律師事務所應否比照會計師執業賠償限制？(5)如何維繫律師之執業品質？(6)律師養成；(7)律師執業權益保障；(8)全聯會理事長及理監事是否應直選？(9)律師公會主管機關何屬？(10)律師懲戒委員會是否應移設於律師公會？等等。</p><p>結果光是在第一個問題上，律師界就已經因為「律師vs.公會」及「公會vs.公會」等利害不一致，爭執不休，迄今沒有定論。剩下9個涉及層面更廣，影響更深遠的問題，則律師界根本還沒有心思靜下心來討論。</p><p>律師制度正確的改革方向，理應著眼於建立健全的律師制度，而非只是一味追求律師乃至於律師公會的利益。律師法修法這個議題，前前後後已經講了十幾年，但是看到日前在立法院公聽會中來自各方律師代表的「嘉言懿行」之後，令人不禁擔心，律師制度改革的第一哩路，恐怕比想像中的遙遠許多。</p><p>本文作者為律師，民間司法改革基金會常務執行委員。</p> #孫斌 #律師 #單一入會 #2016-06-02
 
 # 孫健智
 ## backgrounds
@@ -1579,6 +1579,7 @@ ___
     - 林騰鷂
     - 林宗翰
     - 蘇文俊
+    - 孫斌
     - 吳俊達
     - 俞百羽
     - 張靜
@@ -1632,7 +1633,6 @@ ___
     - 邱梓毓
     - 設法尋方
     - 時瑋辰
-    - 孫斌
     - 王美琇
     - 王芝芝
     - 吳典蓉
