add jrf introduction

--- a/md/總統府司法改革國是會議相關投書彙整.md
+++ b/md/總統府司法改革國是會議相關投書彙整.md
@@ -1830,7 +1830,7 @@
 
 ## articles
 ### 2017/03/16 GMT0+8:00 http://www.upmedia.mg/news_info.php?SerialNo=13681
-- <h2>李念祖專欄：缺乏司法救濟的強制處分－從軟禁談起</h2><p>張學良曾被軟禁很久，似乎是老一輩人風聞而又不可言傳的共同記憶。法律上會有合法的軟禁嗎？答案是，有的，限制住居就是；若是被軟禁一輩子，有沒有司法救濟？信不信由你，理論上真有可能出現缺乏現成司法救濟的時候！</p><p>現正召開司法國是會議，應省視強制處分是否還有缺乏司法救濟的部分。這是本文的主題。</p><p>強制處分有很多種，其中一種是直接強制處分，就是直接對受處分者發生強制力，而且可加執行而立即失去自由或權利的決定，譬如拘禁（立即羈束人身）、扣押（立即接管、占有物品）、限制住居（立即限制遷徙移動區域或出國旅行）、等等都是。還有一種間接強制處分，使得受處分者立即處於隨時可能遭到直接強制處分而失去自由、權利的狀態，如傳喚（使得被傳者處於抗傳即拘的狀態）、通緝（使被緝者處於隨時可受逮捕的狀態）都是。強制處分使得當事人在事實上立即或隨時可能喪失自由權利，當然是對當事人不利的處分。</p><p>強制處分不受法院審查？</p><p>強制處分會使得當事人立刻失去自由或權利，本來應該要有事前的司法審查才對。像刑事訴訟法規定檢察官搜索扣押原則上要先向法院聲請搜索票後才能進行，就是事前的司法審查。大法官解釋檢察官行使羈押應經法院同意，也是同樣的道理；正因為直接的強制處分原則上應經事前的司法審查，憲法才會規定遇到未經法院許可的逮捕拘禁（當然包括羈押），須用即時的事後司法審理加以彌補（也就是聲請法院在極短的24小時內提審）。然而，直到今天，仍然還有檢方的強制處分，連用事後的司法審查加以救濟的機會都沒有。</p><p>傳喚－間接強制處分</p><p>譬如傳訊是一種間接的強制處分。刑事訴訟法上規定，實施偵查時非有必要，不得先行傳訊被告。此點與大法官曾經解釋要求，須有「相當理由足認」（probable cause）其涉嫌非行，才能實施臨檢，道理相通，也就是檢察官須有相當理由足認被告需要到場說明，才可傳喚。任意傳喚，無故收到傳票的人，通常只看到傳票的罪名與抗傳即拘的例稿威脅，總是不免忐忑，沒必要的傳喚，不僅擾民，何異於作威作福的官僚？可是傳喚這項處分，是不能抗告（法律上此處稱為準抗告）尋求司法救濟的。</p><p>試想，總統約見平民，平民不肯赴約，總統也不能「抗請即拘」，為什麼檢察官可以抗傳即拘？如果連抗告也不能，又如何要求執法者遵守非有必要不先傳喚被告的規矩呢？檢察官傳喚不到即得拘提，而且不須要法院同意簽發拘票即可為之，傳喚其實只是先禮後兵的羈押通知罷了。即使賦予事前的司法審查做為救濟在實務經驗上的可能，為了促成執法者自動守法，事後的抗告機制也有存在的理由。規定不足，是現行法的缺陷。</p><p>根據大法官釋字第708與710號解釋的法理，此種欠缺應已違反法官保留原則。更令人匪夷所思的地方，在於刑事訴訟法規定（178條ll）檢察官傳喚證人（而非被告）時，證人如無正當理由而不到場，得予拘提，也可聲請法院裁定罰鍰。檢察官起訴之前，證人能不能說是已有作證的義務，可能都有討論的空間。罰鍰是限制財產自由，還要法院事前同意，拘提是羈束人身自由，不但不必法院事前審查，竟連事後的抗告程序也不具備，是一項缺陷。</p><p>通緝－間接強制處分</p><p>如果不理傳喚，後果就是被拘提；如果傳喚的地址不對，則就可能遭到通緝。遭到通緝的人，可能只是因為檢察官聽了告訴人的一面之詞，傳喚不到就用逃亡或藏匿做為理由遭到通緝了。被通緝的人可能因為種種緣由沒有收到傳喚通知（也就是傳票）而遭到通緝。譬如說人在國外，甚至是個外國人，一旦遭人控告，很容易地就成為通緝犯，立刻處於名譽權受到傷害的境地。因為在台灣，拜無罪推定並未為社會的普遍觀念所賜，「通緝犯」是社會上極不名譽的頭銜，如果因此以為通緝不只是間接強制處分，而相當於直接強制處分，也不為過。</p><p>按照現行實務，遭到通緝之後，即使告知檢察官願意自動到案，也不算是通緝原因消滅，而必須先完成逮捕，通緝才能撤銷。通緝並不需要法院事前同意；一旦遭到通緝，又沒有抗告的程序可以發動司法救濟。當事人可能完全不知所以，就注定要遭受逮捕的難堪。即使逮捕後可能獲釋，但是誰願意全憑檢察官自行裁量就強制通知到案，不到案即可不經法院同意而被通緝、逮捕或是拘提；即使願意到案說明，竟連抗告以撤銷通緝避免逮捕招致難堪的機會也沒有，這樣的制度，能算是友善的司法嗎？</p><p>限制住居－直接強制處分</p><p>限制住居，一般俗稱限制出境，就是立即限制旅行遷徙等移居移動自由的強制處分。所謂「軟禁」，就是限制住居的另一種型態。限制住居，現行法上是由檢方實施的直接強制處分，不須先經法院同意。檢察官決定當事人限制住居之後，當事人可以在五日內向法院提起準抗告，事後的司法救濟似乎已經存在。但是，限制住居的處分通常沒有期限，從下令限制住居到檢察官起訴，可能時間甚長，但是當事人卻早已經過了五日的準抗告期間，不能再提出準抗告。如果限制出境幾個星期幾個月甚至幾年後還未提起公訴，或是像張少帥一樣地遭到軟禁，現行法上並沒有現成的司法救濟程序可以用來挑戰無止盡的軟禁。</p><p>限制住居作為強制處分，應該檢討的方向有三，一是檢察官可不可不經法院同意就限制住居，答案是如此才足以保障權利。二是該不該有期限？答案也是如此才足以保障權利。三則是限制住居的強制處分，是否應由法院提審予以救濟？回答這個問題，流行的見解是將限制住居排除在提審的範圍之外，理由則是限制住居不能算是逮捕拘禁，因為逮捕拘禁是限制人身自由，限制住居限制的則是旅行遷徙自由，不算是限制人身自由。然而，人身移動自由怎會不在人身自由的射程範圍之內呢？軟禁無論多久都得不請求法院提審，這樣的制度不該改善嗎？這許多不受法院審查的強制處分，刑事訴訟法若是不做修正，怎麼能夠合乎憲法的要求呢？</p><p>延伸閱讀：徐自強案為「無罪推定原則」作出了正確示範</p> #李念祖 #學者 #強制處分 #2017-03-16
+- <h2>李念祖專欄：缺乏司法救濟的強制處分－從軟禁談起</h2><p>張學良曾被軟禁很久，似乎是老一輩人風聞而又不可言傳的共同記憶。法律上會有合法的軟禁嗎？答案是，有的，限制住居就是；若是被軟禁一輩子，有沒有司法救濟？信不信由你，理論上真有可能出現缺乏現成司法救濟的時候！</p><p>現正召開司法國是會議，應省視強制處分是否還有缺乏司法救濟的部分。這是本文的主題。</p><p>強制處分有很多種，其中一種是直接強制處分，就是直接對受處分者發生強制力，而且可加執行而立即失去自由或權利的決定，譬如拘禁（立即羈束人身）、扣押（立即接管、占有物品）、限制住居（立即限制遷徙移動區域或出國旅行）、等等都是。還有一種間接強制處分，使得受處分者立即處於隨時可能遭到直接強制處分而失去自由、權利的狀態，如傳喚（使得被傳者處於抗傳即拘的狀態）、通緝（使被緝者處於隨時可受逮捕的狀態）都是。強制處分使得當事人在事實上立即或隨時可能喪失自由權利，當然是對當事人不利的處分。</p><p>強制處分不受法院審查？</p><p>強制處分會使得當事人立刻失去自由或權利，本來應該要有事前的司法審查才對。像刑事訴訟法規定檢察官搜索扣押原則上要先向法院聲請搜索票後才能進行，就是事前的司法審查。大法官解釋檢察官行使羈押應經法院同意，也是同樣的道理；正因為直接的強制處分原則上應經事前的司法審查，憲法才會規定遇到未經法院許可的逮捕拘禁（當然包括羈押），須用即時的事後司法審理加以彌補（也就是聲請法院在極短的24小時內提審）。然而，直到今天，仍然還有檢方的強制處分，連用事後的司法審查加以救濟的機會都沒有。</p><p>傳喚－間接強制處分</p><p>譬如傳訊是一種間接的強制處分。刑事訴訟法上規定，實施偵查時非有必要，不得先行傳訊被告。此點與大法官曾經解釋要求，須有「相當理由足認」（probable cause）其涉嫌非行，才能實施臨檢，道理相通，也就是檢察官須有相當理由足認被告需要到場說明，才可傳喚。任意傳喚，無故收到傳票的人，通常只看到傳票的罪名與抗傳即拘的例稿威脅，總是不免忐忑，沒必要的傳喚，不僅擾民，何異於作威作福的官僚？可是傳喚這項處分，是不能抗告（法律上此處稱為準抗告）尋求司法救濟的。</p><p>試想，總統約見平民，平民不肯赴約，總統也不能「抗請即拘」，為什麼檢察官可以抗傳即拘？如果連抗告也不能，又如何要求執法者遵守非有必要不先傳喚被告的規矩呢？檢察官傳喚不到即得拘提，而且不須要法院同意簽發拘票即可為之，傳喚其實只是先禮後兵的羈押通知罷了。即使賦予事前的司法審查做為救濟在實務經驗上不可能，為了促成執法者自動守法，事後的抗告機制也有存在的理由。規定不足，是現行法的缺陷。</p><p>根據大法官釋字第708與710號解釋的法理，此種欠缺應已違反法官保留原則。更令人匪夷所思的地方，在於刑事訴訟法規定（178條ll）檢察官傳喚證人（而非被告）時，證人如無正當理由而不到場，得予拘提，也可聲請法院裁定罰鍰。檢察官起訴之前，證人能不能說是已有作證的義務，可能都有討論的空間。罰鍰是限制財產自由，還要法院事前同意，拘提是羈束人身自由，不但不必法院事前審查，竟連事後的抗告程序也不具備，是一項缺陷。</p><p>通緝－間接強制處分</p><p>如果不理傳喚，後果就是被拘提；如果傳喚的地址不對，則就可能遭到通緝。遭到通緝的人，可能只是因為檢察官聽了告訴人的一面之詞，傳喚不到就用逃亡或藏匿做為理由遭到通緝了。被通緝的人可能因為種種緣由沒有收到傳喚通知（也就是傳票）而遭到通緝。譬如說人在國外，甚至是個外國人，一旦遭人控告，很容易地就成為通緝犯，立刻處於名譽權受到傷害的境地。因為在台灣，拜無罪推定並未為社會的普遍觀念所賜，「通緝犯」是社會上極不名譽的頭銜，如果因此以為通緝不只是間接強制處分，而相當於直接強制處分，也不為過。</p><p>按照現行實務，遭到通緝之後，即使告知檢察官願意自動到案，也不算是通緝原因消滅，而必須先完成逮捕，通緝才能撤銷。通緝並不需要法院事前同意；一旦遭到通緝，又沒有抗告的程序可以發動司法救濟。當事人可能完全不知所以，就注定要遭受逮捕的難堪。即使逮捕後可能獲釋，但是誰願意全憑檢察官自行裁量就強制通知到案，不到案即可不經法院同意而被通緝、逮捕或是拘提；即使願意到案說明，竟連抗告以撤銷通緝避免逮捕招致難堪的機會也沒有，這樣的制度，能算是友善的司法嗎？</p><p>限制住居－直接強制處分</p><p>限制住居，一般俗稱限制出境，就是立即限制旅行遷徙等移居移動自由的強制處分。所謂「軟禁」，就是限制住居的另一種型態。限制住居，現行法上是由檢方實施的直接強制處分，不須先經法院同意。檢察官決定當事人限制住居之後，當事人可以在五日內向法院提起準抗告，事後的司法救濟似乎已經存在。但是，限制住居的處分通常沒有期限，從下令限制住居到檢察官起訴，可能時間甚長，但是當事人卻早已經過了五日的準抗告期間，不能再提出準抗告。如果限制出境幾個星期幾個月甚至幾年後還未提起公訴，或是像張少帥一樣地遭到軟禁，現行法上並沒有現成的司法救濟程序可以用來挑戰無止盡的軟禁。</p><p>限制住居作為強制處分，應該檢討的方向有三，一是檢察官可不可不經法院同意就限制住居，答案是如此才足以保障權利。二是該不該有期限？答案也是如此才足以保障權利。三則是限制住居的強制處分，是否應由法院提審予以救濟？回答這個問題，流行的見解是將限制住居排除在提審的範圍之外，理由則是限制住居不能算是逮捕拘禁，因為逮捕拘禁是限制人身自由，限制住居限制的則是旅行遷徙自由，不算是限制人身自由。然而，人身移動自由怎會不在人身自由的射程範圍之內呢？軟禁無論多久都得不請求法院提審，這樣的制度不該改善嗎？這許多不受法院審查的強制處分，刑事訴訟法若是不做修正，怎麼能夠合乎憲法的要求呢？</p><p>延伸閱讀：徐自強案為「無罪推定原則」作出了正確示範</p> #李念祖 #學者 #強制處分 #2017-03-16
 
 # 林達
 ## backgrounds
@@ -1854,8 +1854,13 @@
 ___
 ```htmlembedded=
 <p>
-2017年2月起，總統府召開司法改革國是會議，會議期間，媒體上出現大量司法制度相關投書，此為投書整理。
+2017年2月起，總統府召開<a href="https://justice.president.gov.tw/" target="_blank">司法改革國是會議</a>，會議期間，媒體上出現大量司法制度相關投書，此為民間司改會所製作之投書整理。
 </p>
+<ul>
+  <li><a href="https://www.jrf.org.tw/" target="_blank">民間司改會網站</a></li>
+  <li><a href="http://fb.com/jrf.tw" target="_blank">民間司改會粉專</a></li>
+  <li><a href="http://bit.ly/2m37Aha" target="_blank">關於Debater辯論家</a></li>
+</ul>
 ```
 
 - 作者
