--- a/md/總統府司法改革國是會議相關投書彙整.md
+++ b/md/總統府司法改革國是會議相關投書彙整.md
@@ -286,7 +286,7 @@
 
 ## articles
 ### 2017/02/01 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170201/1046863/
-- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170201/1046863/" target="_blank">【司改交鋒】司法公信力值得多少退休金？</a></h2><p>林青弘／自由作家</p><p>台灣高等法院錢建榮法官在1月23日接受媒體採訪，問及退養金、所得替代率之看法，錢法官認同現行法所定98%所得替代率可以適當比例調整，但是無法接受全數刪除退養金。錢法官甚至大膽預言，只要年改新法大幅刪減法官的退休給付，勢必帶動退休潮，多數優秀有戰力的法官甚至會早早退場。</p><p>法官應依據憲法及法律，本於良心，超然、獨立、公正審判，不受任何干涉。《法官法》第13條第1項定有明文。審判獨立是法官職務的核心價值，也是法官存在，絕對且唯一的正當與必要。《憲法》雖然保障法官終身職，但是法官個人意願超越《憲法》的終身職保障，否則法官將如同皇帝，不得辭職、留職、退休。</p><p>《憲法》上的終身職保障，目的在於維護審判之超然、獨立、公正，法官如果辭職、退休，不再有審判職務之執行，則無涉於審判獨立，其退休給付要如何修訂，當然無關審判獨立，不影響司法獨立。</p><p>司法公信力低落，人民卻不能要求法官退回已領取的薪資、福利等待遇。審判獨立與司法公信，像是天秤上的兩端，互相衡平，也互相制裁。標榜審判獨立，卻不能昭顯司法公信，有權威而無信賴，人民疏離司法，法官被視為社會異類。強調司法公信，卻昧於審判獨立，人多勢眾者為「公論」，司法淪為霸凌工具，有錢、有權、有勢者專享司法權。</p><p>如果多給法官薪水待遇，可以提升司法公信、維護審判獨立，基於司法為民，全民當然樂見贊成。若是司法公信低落，審判獨立猶如初一、十五的月亮會有情勢改變，多給法官一塊錢，也是浪費公帑，糟蹋人民的血汗錢。</p><p>年改新法不能把法官、檢察官完全剔除不理，當退休、在職的司法官要爭取退休給付的權益時，我們要請教法官、檢察官，司法公信力值得多少退休金？</p><p>既然已經退休，不再執行職務，哪來高薪養廉，有何司法獨立？在職時，若不在乎司法公信力，只在乎個人威信，若有公權力濫用，官官相護、門派掩飾，更有甚者，司法淪為政治鷹犬，司法公信力還能剩多少？</p><p>年改方案可以給予司法官選擇機會，不想續留者，儘早退休出場，退休給付終究要改革，方法不能只限定於退養金。新法上路，若將「朝三暮三」改成「朝四暮二」，這塊餅雖然未縮小也未做大，但是提高在職待遇、降低退休給付，薪資優遇更加合理分配，除能鼓舞在職司法官戮力從公，職業疲乏者亦可以適時退場。</p><p>養老不同於養廉、養望，混為一談只是模糊焦點，法官與檢察官總不能落人口實，徒留「在職愛勢」、「退休貪財」的誤解罵名。素養高、自律強的司法官們，請當年金改革的領頭羊，為民表率，留下典範。</p><p>你對新聞是否不吐不快？《蘋果日報》新闢《即時論壇》，歡迎讀者投稿，對新聞時事表達意見。</p><p>來稿請寄onlineopinions@appledaily.com.tw，文長以500字為度，一經錄用，將發布在蘋果日報即時新聞區，唯不付稿酬。請勿一稿兩投，本報有刪改權，當天未見報，請另行處理，不另退件或通知。</p><p>更多林青弘文章</p> #林青弘 #其他 #司法官退休金 #蘋果日報 #2017-02-01
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170201/1046863/" target="_blank">【司改交鋒】司法公信力值得多少退休金？</a></h2><p>林青弘／自由作家</p><p>台灣高等法院錢建榮法官在1月23日接受媒體採訪，問及退養金、所得替代率之看法，錢法官認同現行法所定98%所得替代率可以適當比例調整，但是無法接受全數刪除退養金。錢法官甚至大膽預言，只要年改新法大幅刪減法官的退休給付，勢必帶動退休潮，多數優秀有戰力的法官甚至會早早退場。</p><p>法官應依據憲法及法律，本於良心，超然、獨立、公正審判，不受任何干涉。《法官法》第13條第1項定有明文。審判獨立是法官職務的核心價值，也是法官存在，絕對且唯一的正當與必要。《憲法》雖然保障法官終身職，但是法官個人意願超越《憲法》的終身職保障，否則法官將如同皇帝，不得辭職、留職、退休。</p><p>《憲法》上的終身職保障，目的在於維護審判之超然、獨立、公正，法官如果辭職、退休，不再有審判職務之執行，則無涉於審判獨立，其退休給付要如何修訂，當然無關審判獨立，不影響司法獨立。</p><p>司法公信力低落，人民卻不能要求法官退回已領取的薪資、福利等待遇。審判獨立與司法公信，像是天秤上的兩端，互相衡平，也互相制裁。標榜審判獨立，卻不能昭顯司法公信，有權威而無信賴，人民疏離司法，法官被視為社會異類。強調司法公信，卻昧於審判獨立，人多勢眾者為「公論」，司法淪為霸凌工具，有錢、有權、有勢者專享司法權。</p><p>如果多給法官薪水待遇，可以提升司法公信、維護審判獨立，基於司法為民，全民當然樂見贊成。若是司法公信低落，審判獨立猶如初一、十五的月亮會有情勢改變，多給法官一塊錢，也是浪費公帑，糟蹋人民的血汗錢。</p><p>年改新法不能把法官、檢察官完全剔除不理，當退休、在職的司法官要爭取退休給付的權益時，我們要請教法官、檢察官，司法公信力值得多少退休金？</p><p>既然已經退休，不再執行職務，哪來高薪養廉，有何司法獨立？在職時，若不在乎司法公信力，只在乎個人威信，若有公權力濫用，官官相護、門派掩飾，更有甚者，司法淪為政治鷹犬，司法公信力還能剩多少？</p><p>年改方案可以給予司法官選擇機會，不想續留者，儘早退休出場，退休給付終究要改革，方法不能只限定於退養金。新法上路，若將「朝三暮三」改成「朝四暮二」，這塊餅雖然未縮小也未做大，但是提高在職待遇、降低退休給付，薪資優遇更加合理分配，除能鼓舞在職司法官戮力從公，職業疲乏者亦可以適時退場。</p><p>養老不同於養廉、養望，混為一談只是模糊焦點，法官與檢察官總不能落人口實，徒留「在職愛勢」、「退休貪財」的誤解罵名。素養高、自律強的司法官們，請當年金改革的領頭羊，為民表率，留下典範。</p><p>你對新聞是否不吐不快？《蘋果日報》新闢《即時論壇》，歡迎讀者投稿，對新聞時事表達意見。</p><p>更多林青弘文章</p> #林青弘 #其他 #司法官退休金 #蘋果日報 #2017-02-01
 
 # 陳瑞仁
 ## backgrounds
@@ -422,7 +422,7 @@
 
 ## articles
 ### 2017/02/16 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170216/1057327/
-- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170216/1057327/" target="_blank">【司改交鋒】法院到底是誰開的？</a></h2><p>林青弘／自由作家</p><p>黨產會由專業律師顧立雄擔任主委，迄今績效欠佳，與法院的論戰勝負，尤需努力。</p><p>行政法院體系，向來尊重行政處分，要在行政訴訟上打贏政府機關，實在困難。由林志玲、林若亞抗稅官司敗訴定讞，最後由大法官釋憲救濟，可見一斑。</p><p>然而，國民黨近來數件訴請停止行政處分的裁定，大多敗訴都是黨產會，令人油然升起質疑，到底是黨產會不專業、不合法，還是行政法院現出原形，效忠國民黨？國民黨大老許水德的名言「法院是國民黨開的」、「法院也是執政黨的」，裊繞於腦中，不能停止。</p><p>如果法院是執政黨的，換黨執政，是否意味法院換人所有？普通法院有民事、刑事等，另外還有行政法院、智慧財產法院、少年及家事法院，這些法院的「老闆」，難道換人做，輪到民進黨開法院？以黨產會追討黨產的行政處分被裁定停止執行來說，行政法院確實不是民進黨開的。許水德的法院名言，似乎不能適用於民進黨身上。</p><p>法院是否公平、公正，不是法官三言兩語說了算數。自己的判決自己人說公正，未必經得起社會輿論檢視，而且容易招來官官相護的非議，致使恐龍法官之說，成為怒斥法官的免責共識與公用語言。</p><p>因司法不公無信，指責法官為恐龍、檢察官為烏龍，若以妨害公務或妨害名譽而定罪，這一定是司法無厘頭，民主憲政的大笑話。經不起批評與監督的法官、檢察官，有何能力獲得人民信賴而理性執行公權力？</p><p>若不是人民同意國家體制授權賦予司法官有偵審職權，這些人難道國考及格、書類審查合格，即能掌握人民的生殺大權，專制司法訴訟所有權益？法院判決不是複製、貼上而已，沒有服眾的論理說明，一切堅信司法官我說了算數，司法不是為民，司法只是害民。</p><p>司法改革國是會議預定6月召開全國大會，屆時將由蔡總統親自主持。人民不滿司法效率，由來已久。雖然個案救濟不是司改國是會議目的，但是司改成果可以救濟未來即將受害的千萬個案。</p><p>排除票選代表以外，官方指定司改小組成員若是冠蓋雲集，這些被指定的「頭人們」，是不是為了追求個人名聲經歷，想要爭得更上層樓的踏板而來？他們的初衷動心是為了司改大業，還是官官相護的代理人？</p><p>司法為民或司法害民，僅在一念之差。法院是誰開的，決定司法為民或害民。改革無須改到飽，讓人民有利感受的改革，才是成功的改革。</p><p>你對新聞是否不吐不快？本報特闢《即時論壇》，歡迎讀者投稿，對新聞時事表達意見。來稿請寄onlineopinions@appledaily.com.tw，文長以500字為度，一經錄用，將發布在《蘋果日報》即時新聞區，唯不付稿酬。請勿一稿兩投，本報有刪改權，當天未見報，請另行處理，不另退件或通知。</p><p>更多林青弘文章</p> #林青弘 #其他 #司法公正 #議事程序 #蘋果日報 #2017-02-16
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170216/1057327/" target="_blank">【司改交鋒】法院到底是誰開的？</a></h2><p>林青弘／自由作家</p><p>黨產會由專業律師顧立雄擔任主委，迄今績效欠佳，與法院的論戰勝負，尤需努力。</p><p>行政法院體系，向來尊重行政處分，要在行政訴訟上打贏政府機關，實在困難。由林志玲、林若亞抗稅官司敗訴定讞，最後由大法官釋憲救濟，可見一斑。</p><p>然而，國民黨近來數件訴請停止行政處分的裁定，大多敗訴都是黨產會，令人油然升起質疑，到底是黨產會不專業、不合法，還是行政法院現出原形，效忠國民黨？國民黨大老許水德的名言「法院是國民黨開的」、「法院也是執政黨的」，裊繞於腦中，不能停止。</p><p>如果法院是執政黨的，換黨執政，是否意味法院換人所有？普通法院有民事、刑事等，另外還有行政法院、智慧財產法院、少年及家事法院，這些法院的「老闆」，難道換人做，輪到民進黨開法院？以黨產會追討黨產的行政處分被裁定停止執行來說，行政法院確實不是民進黨開的。許水德的法院名言，似乎不能適用於民進黨身上。</p><p>法院是否公平、公正，不是法官三言兩語說了算數。自己的判決自己人說公正，未必經得起社會輿論檢視，而且容易招來官官相護的非議，致使恐龍法官之說，成為怒斥法官的免責共識與公用語言。</p><p>因司法不公無信，指責法官為恐龍、檢察官為烏龍，若以妨害公務或妨害名譽而定罪，這一定是司法無厘頭，民主憲政的大笑話。經不起批評與監督的法官、檢察官，有何能力獲得人民信賴而理性執行公權力？</p><p>若不是人民同意國家體制授權賦予司法官有偵審職權，這些人難道國考及格、書類審查合格，即能掌握人民的生殺大權，專制司法訴訟所有權益？法院判決不是複製、貼上而已，沒有服眾的論理說明，一切堅信司法官我說了算數，司法不是為民，司法只是害民。</p><p>司法改革國是會議預定6月召開全國大會，屆時將由蔡總統親自主持。人民不滿司法效率，由來已久。雖然個案救濟不是司改國是會議目的，但是司改成果可以救濟未來即將受害的千萬個案。</p><p>排除票選代表以外，官方指定司改小組成員若是冠蓋雲集，這些被指定的「頭人們」，是不是為了追求個人名聲經歷，想要爭得更上層樓的踏板而來？他們的初衷動心是為了司改大業，還是官官相護的代理人？</p><p>司法為民或司法害民，僅在一念之差。法院是誰開的，決定司法為民或害民。改革無須改到飽，讓人民有利感受的改革，才是成功的改革。</p><p>更多林青弘文章</p> #林青弘 #其他 #司法公正 #議事程序 #蘋果日報 #2017-02-16
 
 # 林臻嫺
 ## backgrounds
@@ -446,7 +446,7 @@
 
 ## articles
 ### 2017/02/17 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170217/1058081/
-- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170217/1058081/" target="_blank">【司改交鋒】邱太三很天才 人民不當豬頭</a></h2><p>林青弘／自由作家</p><p>法務部邱太三部長在昨（16）日舉行記者會，公布「檢察體系自我改革」三大方向為「提高起訴門檻」、「組成人民檢察審查會」、「強化檢察官個案評鑑」。</p><p>如果這是理論與實務兼備的改革方向，邱部長的天才想法，很傻很天真，只是盡情紙上作文，完全不切中要害。</p><p>關於「提高起訴門檻」部分，除了貪瀆類罪名定罪率不及6成，其他刑案定罪率至少在9成以上，起訴門檻本質上不能量化評判，提高起訴門檻怎會是提高定罪率的有效對策？「足信被告應受有罪判決者」的修法芻議，實在是脫褲子放屁，也把檢察官與法官角色互相混淆搞亂。</p><p>判決是法官職權，不是檢察官職權，怎能以法官角度來限定檢察官職權行使？這不是恢復舊時的糾問惡制嗎？審檢對於大水庫理論、宋朝公使錢、實質影響力、言論自由與免責認定等法律見解歧異，才是影響定罪率的關鍵主因。</p><p>證據若不合法，法院一定駁斥不採，物證不會改變，證人證詞若有翻供，檢察官如何應對，如何反駁與論證？</p><p>偵訊技巧若使用不當，經檢察官「提示」後，是否涉及誘導證人結證？偵查過程是否要SOP，不允許檢察官隨興演出？從證據推論到犯罪事實的認定，如何確保法院形成有罪心證？</p><p>空言提高起訴門檻，檢察官更害怕擔負起訴責任，「逆選擇」的法律經濟機制運作後，檢察官只會力求自保，偏好不起訴處分，無異增加犯罪者規避刑罰的漏洞。</p><p>至於沒有告訴人的刑案，怎能期待透過人民檢察審查會的機制來建議再行偵查或另以律師起訴？沒有告訴人，誰來委任律師起訴？律師費若由政府買單，是不是變相圖利？律師沒有調查權，如此改革，豈不是矛盾荒謬？</p><p>再議制度不檢討，二審檢察長處分書沒有承辦檢察官副署負責，審查過程沒有合議，承辦檢察官掌握駁回或發回之關鍵決定。確定案件的書類不公開，如何公論檢察官的專業素質？</p><p>爭議案件只重證據新不新，不論法理疏忽，原檢察官不附理由的偵查認定，如何說服訴訟關係人？聲請交付審判制度沒有實質效益，同樣都要強制委任律師，檢察官不起訴之後，為何不許人民委任律師交付自訴？</p><p>再者，外部民間人士加入檢察官評鑑真有用處？警察犯錯，重則成為新聞焦點、媒體奚落，檢察官犯錯，官官相護、文過飾非。沒有科學化注重「客訴」處理，再多評鑑都是浪費。</p><p>檢察體系一方面要顧全司法威信，一方面又要外部力量協助內部檢討與監督，兩者互有牴觸而不能兼顧，衝突已久，欠缺衡平機制。現行制式調查、自己的組員自己查、複製貼上就結案等慣性惡習，撐不起外部力量加入評鑑團隊的獨立客觀作用。</p><p>邱部長很天才，端出這樣的改革菜單，未免輕率不完備，說服不了內行人，也無法切中弊病加以革除。奉勸部長大人，人民不願意成為司改祭典的豬頭。</p><p>你對新聞是否不吐不快？本報特闢《即時論壇》，歡迎讀者投稿，對新聞時事表達意見。來稿請寄onlineopinions@appledaily.com.tw，文長以500字為度，一經錄用，將發布在《蘋果日報》即時新聞區，唯不付稿酬。請勿一稿兩投，本報有刪改權，當天未見報，請另行處理，不另退件或通知。</p><p>更多林青弘文章</p> #林青弘 #其他 #起訴門檻 #蘋果日報 #2017-02-17
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170217/1058081/" target="_blank">【司改交鋒】邱太三很天才 人民不當豬頭</a></h2><p>林青弘／自由作家</p><p>法務部邱太三部長在昨（16）日舉行記者會，公布「檢察體系自我改革」三大方向為「提高起訴門檻」、「組成人民檢察審查會」、「強化檢察官個案評鑑」。</p><p>如果這是理論與實務兼備的改革方向，邱部長的天才想法，很傻很天真，只是盡情紙上作文，完全不切中要害。</p><p>關於「提高起訴門檻」部分，除了貪瀆類罪名定罪率不及6成，其他刑案定罪率至少在9成以上，起訴門檻本質上不能量化評判，提高起訴門檻怎會是提高定罪率的有效對策？「足信被告應受有罪判決者」的修法芻議，實在是脫褲子放屁，也把檢察官與法官角色互相混淆搞亂。</p><p>判決是法官職權，不是檢察官職權，怎能以法官角度來限定檢察官職權行使？這不是恢復舊時的糾問惡制嗎？審檢對於大水庫理論、宋朝公使錢、實質影響力、言論自由與免責認定等法律見解歧異，才是影響定罪率的關鍵主因。</p><p>證據若不合法，法院一定駁斥不採，物證不會改變，證人證詞若有翻供，檢察官如何應對，如何反駁與論證？</p><p>偵訊技巧若使用不當，經檢察官「提示」後，是否涉及誘導證人結證？偵查過程是否要SOP，不允許檢察官隨興演出？從證據推論到犯罪事實的認定，如何確保法院形成有罪心證？</p><p>空言提高起訴門檻，檢察官更害怕擔負起訴責任，「逆選擇」的法律經濟機制運作後，檢察官只會力求自保，偏好不起訴處分，無異增加犯罪者規避刑罰的漏洞。</p><p>至於沒有告訴人的刑案，怎能期待透過人民檢察審查會的機制來建議再行偵查或另以律師起訴？沒有告訴人，誰來委任律師起訴？律師費若由政府買單，是不是變相圖利？律師沒有調查權，如此改革，豈不是矛盾荒謬？</p><p>再議制度不檢討，二審檢察長處分書沒有承辦檢察官副署負責，審查過程沒有合議，承辦檢察官掌握駁回或發回之關鍵決定。確定案件的書類不公開，如何公論檢察官的專業素質？</p><p>爭議案件只重證據新不新，不論法理疏忽，原檢察官不附理由的偵查認定，如何說服訴訟關係人？聲請交付審判制度沒有實質效益，同樣都要強制委任律師，檢察官不起訴之後，為何不許人民委任律師交付自訴？</p><p>再者，外部民間人士加入檢察官評鑑真有用處？警察犯錯，重則成為新聞焦點、媒體奚落，檢察官犯錯，官官相護、文過飾非。沒有科學化注重「客訴」處理，再多評鑑都是浪費。</p><p>檢察體系一方面要顧全司法威信，一方面又要外部力量協助內部檢討與監督，兩者互有牴觸而不能兼顧，衝突已久，欠缺衡平機制。現行制式調查、自己的組員自己查、複製貼上就結案等慣性惡習，撐不起外部力量加入評鑑團隊的獨立客觀作用。</p><p>邱部長很天才，端出這樣的改革菜單，未免輕率不完備，說服不了內行人，也無法切中弊病加以革除。奉勸部長大人，人民不願意成為司改祭典的豬頭。</p><p>更多林青弘文章</p> #林青弘 #其他 #起訴門檻 #蘋果日報 #2017-02-17
 
 # 王晴怡
 ## backgrounds
